tests/ui/ast_pool.stderr
error[E0505]: cannot move out of `args` because it is borrowed
  --> $DIR/ast_pool.rs:9:10
   |
8  |     let pool = ast::Pool::new(&mut args);
   |                               --------- borrow of `args` occurs here
9  |     drop(args);
   |          ^^^^ move out of `args` occurs here
10 |     println!("{:?}",pool);
   |                     ---- borrow later used here

For more information about this error, try `rustc --explain E0505`.
